@@ -143,3 +143,20 @@ class IDossierArchiver(Interface):
         """Update the filing prefix on the dossier and
         recursively on all subdossiers.
         """
+
+
+class IDocProperties(Interface):
+    """Adapts IDossierMarker.
+    """
+
+    def get_properties():
+        """Return a dictionary of DocProperties for the adapted dossier.
+        """
+
+
+class IDocPropertyProvider(Interface):
+    """May adapt any object that can be a provider for DocProperties.
+    """
+    def get_properties():
+        """Return a dictionary of DocProperties for the adapted object.
+        """
