@@ -1,8 +1,10 @@
 from five import grok
 from ftw.table import helper
 from ftw.table.interfaces import ITableGenerator
+from ooxml_docprops.properties import update_properties
 from opengever.base.interfaces import IRedirector
 from opengever.dossier import _
+from opengever.dossier.interfaces import IDocProperties
 from opengever.dossier.templatedossier.interfaces import ITemplateUtility
 from opengever.tabbedview.helper import linked
 from plone.dexterity.utils import createContentInContainer
@@ -10,7 +12,9 @@ from plone.dexterity.utils import iterSchemata
 from plone.rfc822.interfaces import IPrimaryField
 from Products.CMFCore.utils import getToolByName
 from Products.statusmessages.interfaces import IStatusMessage
+from tempfile import NamedTemporaryFile
 from z3c.form.interfaces import IValue
+from zope.component import getMultiAdapter
 from zope.component import getUtility
 from zope.component import queryMultiAdapter
 from zope.event import notify
@@ -102,10 +106,34 @@ class TemplateDocumentFormView(grok.View):
         """
 
         template_doc = self.context.restrictedTraverse(template_path)
-        _type = self._get_primary_field_type(template_doc)
 
-        new_file = _type(data=template_doc.file.data,
+        # TODO: Factor out docproperty-setting code into it's own method
+        # TODO: Add registry option to globally disable docproperty code
+        # TODO: Check if the template's filetype is supported. Currently,
+        #       ooxml_docprops only supports *.docx
+
+        # Copy the file data of the template to a temporary file
+        template_data = template_doc.file.data
+        with NamedTemporaryFile(delete=False) as tmpfile:
+            tmpfile_path = tmpfile.name
+            tmpfile.write(template_data)
+
+        # Get properties for the new document based on the dossier
+        dossier = self.context
+        properties_adapter = getMultiAdapter(
+            (dossier, self.request), IDocProperties)
+        properties = properties_adapter.get_properties()
+
+        # Set the DocProperties by modifying the temporary file
+        update_properties(tmpfile_path, properties)
+
+        # Create a new NamedBlobFile from the updated temporary file's data
+        populated_template_data = open(tmpfile_path).read()
+        _type = self._get_primary_field_type(template_doc)
+        new_file = _type(data=populated_template_data,
                          filename=template_doc.file.filename)
+
+        # TODO: Remove temporary file
 
         new_doc = createContentInContainer(
             self.context, 'opengever.document.document',
