@@ -82,6 +82,7 @@ setup(name='opengever.core',
         'ftw.treeview',
         'ftw.upgrade',
         'ftw.zipexport',
+        'ooxml_docprops',
         'opengever.ogds.models',
         'ordereddict',
         'plone.app.dexterity',
