@@ -15,6 +15,7 @@ development-packages =
   ftw.treeview
   opengever.ogds.models
   collective.elephantvocabulary
+  ooxml_docprops
 
 auto-checkout = ${buildout:development-packages}
 
@@ -23,3 +24,4 @@ plone.formwidget.autocomplete = master
 
 [sources]
 plone.formwidget.autocomplete = git git@git.4teamwork.ch:opengever/plone.formwidget.autocomplete.git  branch=${branches:plone.formwidget.autocomplete}
+ooxml_docprops = git git@github.com:4teamwork/ooxml_docprops.git
