@@ -4,6 +4,10 @@ Changelog
 3.2.5 (unreleased)
 ------------------
 
+- Added initial implementation for setting DocProperties when creating
+  a document from template.
+  [lgraf]
+
 - Fixed zipexport-enable upgrade step to match the new registry entry.
   With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
   [lknoepfel]
